# popitka2

./: .gitignore  CMakeLists.txt  README.md  main.c
Data/: gameState.c  menuState.c  overState.c  stateManager.c
Data/include/: menuState.h  overState.h  pad.h  renderCompat.h  textToGraphics.h
nosmoke_usb_linux/: README.txt  build.sh  nosmoke_linux  run.sh
nosmoke_usb_linux/.github/workflows/: main.yml
nosmoke_usb_linux/Data/: introState.c  textToGraphics.c
nosmoke_usb_linux/Data/include/: gameState.h  introState.h  musicManager.h  platform_types.h  stateManager.h
nosmoke_usb_linux/platform/: main_sdl.c
platform/: music_stub.c  pad_sdl.c  render_sdl.c
проверка2/: простой.txt
